--- a/src/app/pages/Importação/importacao-page/importacao-page.component.html
+++ b/src/app/pages/Importação/importacao-page/importacao-page.component.html
@@ -1,19 +1,17 @@
-<div>
+<section>
   <form action="">
     <label>Arquivo fatura:</label>
     <input type="file" [(ngModel)]="nome" name="first">
     <p><button (click)="read()">Enviar</button></p>
+    <input type="text" value={{casa}}>
+    <input type="text" [(ngModel)]="nome" placeholder="Digitai bro" name="first">
     <p>Nome digitado: {{ nome }}</p>
-    <!-- <div *ngIf="transacao">
-      <p>Data: {{ transacao.data }}</p>
-      <p>Title: {{ transacao.title }}</p>
-      <p>Valor: {{ transacao.valor }}</p>
-    </div> -->
-    @if(transacao){
-    <p>Data: {{ transacao.data }}</p>
-    <p>Title: {{ transacao.title }}</p>
-    <p>Valor: {{ transacao.valor }}</p>
+    @if (transacoes) {
+    <div class="grid-container">
+      @for (item of transacoes; track $index) {
+      <div class="grid-item">Data: {{ item.data }} Title: {{ item.title }} Valor: {{ item.valor }}</div>
+      }
+    </div>
     }
-    <!-- <input type="text" [id]="teste" value={{teste}}> -->
   </form>
-</div>
+</section>
