consulta api banco

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         </ul>
       </li>
       <li><a [routerLink]="['Importação']">Importação</a></li>
-      <li><a href="/">Midias</a></li>
+      <li><a [routerLink]="['TipoContas']">Tipos de Contas</a></li>
       <li><a href="/">Conteúdo</a></li>
       <li><a href="/">Provisionamento</a></li>
       <li><a href="/">Identificação</a></li>
