--- a/src/app/pages/accountType/account-type-page/account-type-page.component.css
+++ b/src/app/pages/accountType/account-type-page/account-type-page.component.css
@@ -9,7 +9,21 @@ div{
   padding: 20px 0px;
 }
 
-.teste{
-  display: flex;
+table {
+  width: 50%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 18px;
+  text-align: left;
 }
-
+th, td {
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+th {
+  background-color: #4CAF50;
+  color: white;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
